apps/jellyfin/service-jellyfin.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: jellyfin
  name: jellyfin
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: jellyfin
  type: ClusterIP
