apps/jellyfin/httproute-jellyfin.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: jellyfin
  name: jellyfin
spec:
  parentRefs:
    - namespace: gateway
      name: jdmarble-net
  hostnames:
    - "jellyfin.jdmarble.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 80
